<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="image_source_picker_title">Select image source</string>
    <string name="image_source_picker_camera_label">Camera</string>
    <string name="image_source_picker_gallery_label">Gallery</string>
    <string name="error_generic">An error occurred</string>
</resources>